Added qrcode of site

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<section id="like" class="section">
 		<h2>Give Me a Like</h2>
 		<!-- Facebook Like Button -->
-		<div class="fb-like" data-href="https://www.facebook.com/" data-width="" data-layout="standard" data-action="" data-size="" data-share="false"></div>
+		<div class="fb-like" data-href="https://wed-2023.github.io/325944635/" data-width="" data-layout="standard" data-action="" data-size="" data-share="false"></div>
 	</section>
 
 	<section id="qrcoder" class="section">
